sidecontent from marker click

--- a/static/views/events.ejs
+++ b/static/views/events.ejs
@@ -75,7 +75,8 @@
         down: document.getElementById('date-left'),
         search: document.querySelector('input[type="search"]'),
         category: document.getElementById('filter-category'),
-        type: document.getElementById('filter-type')
+        type: document.getElementById('filter-type'),
+        sidecontent: document.getElementById("sidecontent")
       }
       const searchSettings = {
         type: 'event',
