--- a/static/views/studios.ejs
+++ b/static/views/studios.ejs
@@ -74,7 +74,8 @@
     up: document.getElementById('date-right'),
     down: document.getElementById('date-left'),
     search: document.querySelector('input[type="search"]'),
-    category: document.getElementById('filter-category')
+    category: document.getElementById('filter-category'),
+    sidecontent: document.getElementById("sidecontent")
   }
 
   const searchSettings = {
