--- a/static/views/partials/header-events.ejs
+++ b/static/views/partials/header-events.ejs
@@ -30,6 +30,7 @@
       <select id="filter-type">
         <option value="all" selected="selected">Все направления</option>
         <option value="party">Опены/Вечеринки</option>
+        <option value="camp">Выезд</option>
         <option value="masterclass">Мастер-классы</option>
         <option value="competition">Турниры</option>
         <option value="fest">Фестивали</option>
