--- a/static/views/profile.ejs
+++ b/static/views/profile.ejs
@@ -10,7 +10,8 @@
    <main> 
      <h1>Profile page</h1>
      <p>This page is private</p>
-     <a href="/sessionLogout">Log out</a>
+     <a href="/api/addmarker">Добавить студию или событие</a>
+     <a href="/sessionLogout">Выйти</a>
 
    </main>
 
