--- a/static/views/addmarker.ejs
+++ b/static/views/addmarker.ejs
@@ -285,7 +285,7 @@
       let blob = new Blob([JSON.stringify([body])], headers);
       navigator.sendBeacon("/formclosed", blob);
     });
-    
+
     const navSettings = {
       next: document.getElementById('nextBtn'),
       prev: document.getElementById('prevBtn'),
@@ -298,7 +298,7 @@
 
     this.dancemap.formstep.setForm(navSettings);
     this.dancemap.formstep.setFormData(dataSettings);
-    this.dancemap.formstep.setUppy({debug: true});
+    this.dancemap.formstep.setUppy({debug: false});
 
 
   </script>
