--- a/static/views/profile.ejs
+++ b/static/views/profile.ejs
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Profile page</title>
+  <meta name="yandex-verification" content="e73d49b4298f11ea" />
+  <title>Профиль пользователя</title>
+  <%- include('./partials/counters', {}); -%>
 </head>
 <body>
    <main> 
-     <h1>Profile page</h1>
-     <p>This page is private</p>
-     <a href="/api/addmarker">Добавить студию или событие</a>
-     <a href="/sessionLogout">Выйти</a>
-
+     <h1>Профиль пользователя</h1>
+     <p><a href="/api/addmarker">Добавить студию или событие</a></p>
+     <p><a href="/sessionLogout">Выйти</a></p>
    </main>
 
 </body>
