--- a/static/views/addmarker.ejs
+++ b/static/views/addmarker.ejs
@@ -93,7 +93,7 @@
 
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
+    <%- include('./partials/counters', {}); -%>
     </head>
   
   <body>
@@ -298,7 +298,7 @@
 
     this.dancemap.formstep.setForm(navSettings);
     this.dancemap.formstep.setFormData(dataSettings);
-    this.dancemap.formstep.setUppy({debug: false});
+    this.dancemap.formstep.setUppy({debug: true});
 
 
   </script>
