--- a/static/views/login.ejs
+++ b/static/views/login.ejs
@@ -4,20 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="csrf-token" content="<%= csrfToken %>">
-    <title>Firebase Server Login</title>
+    <title>Вход в личный кабинет - Dancemap.online</title>
+    <meta name="yandex-verification" content="e73d49b4298f11ea" />
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js" defer ></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-auth.js" defer ></script>
-
+    <%- include('./partials/counters', {}); -%>
   </head>
   <body>
     <main>
       <section>
+        <h1>Вход в личный кабинет</h1>
         <form id="login">
-          <label>Login</label>
+          <label>Почтовый адрес</label>
           <input type="text" name="login" />
-          <label>Password</label>
+          <label>Пароль</label>
           <input type="password" name="password" />
-          <button>Log in</button>
+          <button>Войти</button>
         </form>
       </section>
 
