--- a/static/views/signup.ejs
+++ b/static/views/signup.ejs
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="csrf-token" content="<%= csrfToken %>">
     <title>Firebase Server Signup</title>
+    <meta name="yandex-verification" content="e73d49b4298f11ea" />
+    <link href='/css/main.css' rel='stylesheet' />
+    
+    <%- include('./partials/counters', {}); -%>
+    <script  src="/js/dancemap.js"></script>
+    <script  src="/js/nav.js"></script>
   </head>
   <body>
+    <%- include('./partials/header-profile', {}); -%>
     <main>
       <section>
+        <h1>Регистрация на сервисе Dancemap.online</h1>
         <form id="signup">
-          <label>Login</label>
+          <label>Почтовый адрес</label>
           <input type="text" name="login" />
-          <label>Password</label>
+          <label>Пароль</label>
           <input type="password" name="password" />
-          <button>Sign up</button>
+          <button>Зарегистрироваться</button>
         </form>
       </section>
 
