--- a/static/views/addmarker.ejs
+++ b/static/views/addmarker.ejs
@@ -298,7 +298,7 @@
 
     this.dancemap.formstep.setForm(navSettings);
     this.dancemap.formstep.setFormData(dataSettings);
-    this.dancemap.formstep.setUppy({debug: true});
+    this.dancemap.formstep.setUppy({debug: false});
 
 
   </script>
